/* No comment provided by engineer. */
"Anime Search" = "Anime Search";

/* No comment provided by engineer. */
"Average score: %@" = "Average score: %@";

/* No comment provided by engineer. */
"Completed:" = "Completed:";

/* No comment provided by engineer. */
"Dropped:" = "Dropped:";

/* No comment provided by engineer. */
"Genres: %@" = "Genres: %@";

/* No comment provided by engineer. */
"Home" = "Home";

/* No comment provided by engineer. */
"MyAnimeList" = "MyAnimeList";

/* No comment provided by engineer. */
"Number of episodes: %@" = "Number of episodes: %@";

/* No comment provided by engineer. */
"Number of List Users: %@" = "Number of List Users: %@";

/* No comment provided by engineer. */
"On Hold:" = "On Hold:";

/* No comment provided by engineer. */
"Plan to Watch:" = "Plan to Watch:";

/* No comment provided by engineer. */
"Popularity: %@" = "Popularity: %@";

/* No comment provided by engineer. */
"Rank: %@" = "Rank: %@";

/* No comment provided by engineer. */
"Search anime" = "Search anime";

/* No comment provided by engineer. */
"Statistics:" = "Statistics:";

/* No comment provided by engineer. */
"Status:" = "Status:";

/* No comment provided by engineer. */
"Status: %@" = "Status: %@";

/* No comment provided by engineer. */
"Synopsis:" = "Synopsis:";

/* No comment provided by engineer. */
"Top Airing Anime" = "Top Airing Anime";

/* No comment provided by engineer. */
"Top Anime" = "Top Anime";

/* No comment provided by engineer. */
"Top Upcoming Anime" = "Top Upcoming Anime";

/* No comment provided by engineer. */
"Watching:" = "Watching:";

