...
                }
                .padding()
                .frame(maxWidth:.infinity,maxHeight: .infinity)
            }
            .background(Color(.systemGroupedBackground))
            .edgesIgnoringSafeArea(.bottom)
            .navigationTitle("Profile")
            .toolbar{ToolbarItem(placement: .navigationBarTrailing) {
                Button(action: {
                    // Your logout action here
                    authManager.logout()
                }) {
                    Text("Logout")
...
